--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/node": "^16.11.10",
+      "@typescript-eslint/eslint-plugin": "^6.8.0",
+      "eslint": "^8.51.0",
+      "eslint-config-standard-with-typescript": "^39.1.1",
+      "eslint-plugin-import": "^2.28.1",
+      "eslint-plugin-n": "^16.2.0",
+      "eslint-plugin-promise": "^6.1.1",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2"
+      "typescript": "^5.2.2"
    },
    "dependencies": {
       "bcryptjs": "^2.4.3",
