--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
    "dependencies": {
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.19.1",
+      "class-validator": "^0.14.0",
       "dotenv": "^16.3.1",
       "express": "^4.17.2",
       "jsonwebtoken": "^9.0.2",
